# ACM

III_advanced/: 11_1_chess.cpp  11_8_GoT.cpp  12_1_Coke.py  12_8_Foodie.py  12_9_PrimePath.py  13_10_Trigraph.cpp  13_10_Trigraph.py  13_11_Filch.cpp  13_8_Lochness.cpp  13_9_Abc_path.cpp  13_9_Abc_path.py  1_10_rrsched.cpp  1_6_aggrcow.cpp  1_8_facefrnd.cpp  1_9_hangover.cpp  3_9_dice.py  5_1_RRmaze.cpp  5_3_RouteChange.cpp  5_3b_RouteChange.cpp  5_4_FunnyCarRacing.cpp  7_2_FactorialFactors.cpp  7_9_Summation.cpp  8_0_prep.cpp  8_1_circle.cpp  9_1_himalayas.cpp  9_3_symmetry.cpp  CMakeLists.txt  README.md  pr_q.cpp  test.cpp
III_advanced/files/: 11_1_chess.in  11_8_GoT.in  7_9_Summation.in  7_9_Summation2.in  9_3_symmetry2.in
I_beginners/: 1.11_test.py  1.6_rectangles.py  1.8-christmasPlay.py  1.9-theGreatBall.py  10.10_LeastPrimeDivisor.py  10.1_Combinations.py  10.2_Goldbach.py  10.3_Handshakes.py  10.5_Factors.py  12.10_TriangleTypes.py  12.1_Circumference.py  12.2-Beaver.py  12.6_Flowers.py  14.1-Skyline.py  14.14-FatLadies.py  2.10_Ones.py  2.4-Snowflakes.py  2.4b-Snowflakes.py  2.5_atoms.py  2.6-busyman.py  2.7-roommate.py  2.7b-roommate.py  2.9_factorial.py  3.1-BrickWall.py  4.1-Dollars.py  4.1b_Dollars.py  4.2-divisibility.py  4.2b-Divisibility.py  4.3_PayThePrize.py  4.6_HowAdd.py  4.7_Cubeland.py  4.9-Squares.py  4.9b_Squares.py  6.3_Coke.py  6.4_GraphProblem.py  6.7_PhilosopherStones.c  6.8_Foodie.py  6.9-PiggyBank.py  8.1-StackingBoxes.py  8.2_OilDeposits.py  (+1 more)
