cmake_minimum_required(VERSION 3.10)

# set the project name and version
project(Acm_III) 

# specify the C++ standard
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

#############################
#     total score: 22p      #
#############################

##########
# D | 36 #
# C | 42 # 
# B | 48 # 
# A | 54 # 
##########

# testovani
# add_executable(test test.cpp)

# # minisoutez I
# add_executable(odd_sum 1_4_odd_sum.cpp)         #(+3p)
# add_executable(aggrcow 1_6_aggrcow.cpp)         #+0p

# minisoutez II

# # minisoutez III
# add_executable(maze 5_1_RRmaze.cpp)             #+1p
# add_executable(route 5_3_RouteChange.cpp)       #+1p
# add_executable(cars 5_4_FunnyCarRacing.cpp)     #+0p

# # minisoutez IV
# add_executable(fact 7_2_FactorialFactors.cpp)   #+3p
# add_executable(sum 7_9_Summation.cpp)           #+3p

# # seminar 5
# add_executable(vg 8_0_prep.cpp)
# add_executable(circle 8_1_circle.cpp)

# # minisoutez V
# add_executable(himals 9_1_himalayas.cpp)        #+3p
# add_executable(sym 9_3_symmetry.cpp)            #+1p

# minisoutez VI
add_executable(chess 11_1_chess.cpp)              #+3p
add_executable(got 11_8_GoT.cpp)

# # minisoutez VII
# # (python) 12_1_Coke.py                         #+3p
# # (python) 12_8_Foodie.py                       #+3p
# # (python) 12_9_PrimePath.py                    #+1p

# minisoutez VIII


